# cindergrace_git_gui

./: .gitignore  GEMINI.md  LICENSE  README.md  RELEASE_CHECKLIST.md  git_ops.py  main.py  openrouter.py  prompt_builder.py  pyproject.toml  review.md  start.bat  start.sh  storage.py
.github/workflows/: ci.yml
tests/: test_git_ops.py  test_openrouter_crypto.py  test_prompt_builder.py  test_storage.py
